--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -8,6 +8,6 @@
 <body>
 <h1>Произошла ошибка</h1>
 <p th:text="${message}">Что-то пошло не так</p>
-<a href="/clients">Назад к списку клиентов</a>
+<a href="/">Назад на главную страницу</a>
 </body>
 </html>
